--- a/_includes/search.html
+++ b/_includes/search.html
@@ -13,7 +13,7 @@
   </div>
   
   <!-- Script pointing to search-script.js -->
-  <script src="/assets/js/search-script.js" type="text/javascript"></script>
+  <script src="../assets/js/search-script.js" type="text/javascript"></script>
   
   <!-- Configuration -->
   <script>
