--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -1,5 +1,16 @@
 ---
-layout: default
+layout: home
 ---
-<link rel="stylesheet" href="/assets/css/styles.css">
-{{ content }}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Sass Example Site</title>
+  <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}" />
+</head>
+<body>
+  <section class="content">
+    {{ content }}
+  </section>
+</body>
+</html>
