--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -5,7 +5,7 @@
 #search-container {
   min-height: 70vh;
   .search-input-wrapper {
-    height: 10vh;
+    margin: 15% auto;
     display: flex;
     align-content: center;
     justify-content: center;
